Added a lot of files from sample project - build is broken...

--- a/simple-site/src/scss/style.scss
+++ b/simple-site/src/scss/style.scss
@@ -1,9 +1,9 @@
-$font-stack: -apple-system, BlinkMacSystemFont,Roboto,'Open Sans','Helvetica Neue',sans-serif;
+$font-stack: -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", "Helvetica Neue", sans-serif;
 
 @import "~bootstrap/scss/bootstrap";
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/Roboto-Regular.ttf);
